--- a/index.html
+++ b/index.html
@@ -46,7 +46,50 @@
             </div>
           </div>
     </header>
-    <main></main>
+    <main class="container mx-auto">
+        <!-- Feature Section -->
+        <section class="text-center my-24">
+             <h3 class="text-4xl font-extrabold mb-5">Our Featured Products</h3>
+             <p class="lg:max-w-3xl mb-10 mx-auto text-base">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+             <!-- Card container -->
+             <div class="grid gap-24 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+                <!-- 1st card -->
+                <div class="card  p-8 bg-[#F4F4F4] shadow-xl">
+                    <figure><img src="images/tea-1.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class="text-2xl font-extrabold">Milk Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+                  <!-- 2nd card -->
+                <div class="card  p-8 bg-[#F4F4F4] shadow-xl">
+                    <figure><img src="images/tea-2.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class="text-2xl font-extrabold">Black Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+                  <!-- 3rd card -->
+                <div class="card  p-8 bg-[#F4F4F4] shadow-xl">
+                    <figure><img src="images/tea-3.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class="text-2xl font-extrabold">Lemon Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+                  <!-- 4th card -->
+                <div class="card  p-8 bg-[#F4F4F4] shadow-xl">
+                    <figure><img src="images/tea-4.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class="text-2xl font-extrabold">Green Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+
+             </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
