--- a/index.html
+++ b/index.html
@@ -106,7 +106,23 @@
             <p class="text-base text-[#777]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
           </div>
         </section>
+        <!-- Client Review Section -->
+        <section class="m-24 bg-gradient-to-r from-[#FF8938] to-[#ff0000e7] rounded-xl px-16 py-24 flex flex-col lg:flex-row gap-14">
+          <div class="grid gap-5">
+            <h1 class="text-5xl text-[#F4F4F4] font-extrabold">Meet Our Super <br> Clients</h1>
+            <p class="text-base text-[#F4F4F4]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <button class="btn w-[139px] text-black ">Show All</button>
+          </div>
+          <div>
+            <div class="p-10 relative rounded-lg bg-white">
+              <img class="absolute -top-5 -left-5" src="images/client.png" alt="">
+              <p class="text-[#777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h4 class="font-bold">Ilham Yuda</h4>
+              <p class="font-medium text-[#5D5A6F]">Businessman</p>
+            </div>
+          </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer class=""></footer>
 </body>
 </html>
