--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body class="font-manrope">
     <!-- Header Section -->
-    <header class="container mx-auto">
+    <header class="container lg:mt-20 mx-auto">
         <div class="hero">
             <div class="hero-content flex-col lg:flex-row">
               
@@ -32,7 +32,7 @@
                 <h1 class="font-extrabold text-4xl lg:text-7xl">It's good<br> 
                     tea time at The <br>Tea House</h1>
                 <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-                <button class="btn btn-primary">Explore More</button>
+                <button class="btn bg-gradient-to-r from-[#FF8938] to-[#ff0000e7] text-white">Explore More</button>
               </div>
               <div>
                 <img src="images/banner.png" class="max-w-sm" />
@@ -148,6 +148,53 @@
           </div>
         </section>
     </main>
-    <footer class=""></footer>
+    <footer class="px-4 lg:px-48 py-10 bg-base-200 text-base-content">
+      <div class="flex justify-between my-24">
+          <img src="images/cup.png" alt="">
+          <p>
+              <span>Ready to get started?</span>
+              <button class="btn bg-gradient-to-r from-[#FF8938] to-[#ff0000e7] text-white">Get Started</button>
+          </p>
+      </div>
+      <div class="footer">
+          <div>
+              <span class="footer-title">Services</span>
+              <a class="link link-hover">Branding</a>
+              <a class="link link-hover">Design</a>
+              <a class="link link-hover">Marketing</a>
+              <a class="link link-hover">Advertisement</a>
+          </div>
+          <div>
+              <span class="footer-title">Company</span>
+              <a class="link link-hover">About us</a>
+              <a class="link link-hover">Contact</a>
+              <a class="link link-hover">Jobs</a>
+              <a class="link link-hover">Press kit</a>
+          </div>
+          <div>
+              <span class="footer-title">Legal</span>
+              <a class="link link-hover">Terms of use</a>
+              <a class="link link-hover">Privacy policy</a>
+              <a class="link link-hover">Cookie policy</a>
+          </div>
+          <div>
+              <span class="footer-title">Newsletter</span>
+              <div class="form-control w-80">
+                  <label class="label">
+                      <span class="label-text">Enter your email address</span>
+                  </label>
+                  <div class="relative">
+                      <input type="text" placeholder="username@site.com" class="py-4 bg-transparent border-b-2 border-black outline-none" />
+                      <button class="btn text-white absolute top-0 right-0 rounded-full bg-gradient-to-r from-[#FF8938] to-[#ff0000e7]">
+                          <i class="fa-solid fa-chevron-right"></i>
+                      </button>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="mt-10 text-center">
+          <p>Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+      </div>
+  </footer>
 </body>
 </html>
